Button overflow fix

--- a/style.css
+++ b/style.css
@@ -194,6 +194,7 @@ nav > ul{
   color:var(--textcolor0);
   border-radius:2rem;
   overflow:clip;
+  flex: 1 1 0;
 }
 .button{
   background-color:var(--themecolor3);
@@ -202,7 +203,9 @@ nav > ul{
 .button:not(img){
   text-align-last: center;
   padding: 1rem 2rem;
-  max-width: 20%;
+  max-width: 15%;
+
+
 }
 .button:hover{
   background-color:var(--themecolor2);
